# dexter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/dexgys/: norm_stats.json
assets/dexonomy/: norm_stats.json
assets/prompts/: gemma3.yaml
assets/shadowhand/: shadow_hand.xml  shadow_hand_vis.xml
assets/shadowhand_mujoco/: right_hand.xml
benchmark/common/: feature_extractor.py
benchmark/dexgys/: README.md  chamfer.py  fid.py  q1.py  success_rate.py  validator.py
benchmark/dexonomy/: README.md  fid.py  success_rate.py
benchmark/dexonomy/config/: base.yaml
benchmark/dexonomy/config/hand/: shadow.yaml
benchmark/dexonomy/config/task/: eval_dexter.yaml
benchmark/dexonomy/eval_func/: __init__.py  base.py  fc_mocap.py  tabletop_arm.py  tabletop_mocap.py
benchmark/dexonomy/eval_func/fc_metric/: __init__.py  base.py  dfc.py  q1.py  qp.py  tdg.py
benchmark/dexonomy/utils/: file_util.py  grasp_data_preparation.py  hand_util.py  rot_util.py  timer.py
configs/: config.yaml
configs/data/: dexgys.yaml  dexgys_no_ecot.yaml  dexgys_partial_obs.yaml  dexonomy.yaml  dexonomy_no_ecot.yaml
configs/model/: dexter.yaml  dexter_1.5B.yaml  dexter_qwen3.yaml  dexter_smollm2.yaml  dexter_uni3d.yaml
configs/training/: default.yaml
docker/: Dockerfile  build.sh  run.sh
scripts/: run_dexgys_benchmark_one.sh  run_dexgys_benchmark_set.sh  test.py  train.py  visualize_dataset.py  visualize_prediction.py
src/dexter/data/: __init__.py  collators.py  dexgys.py  dexgys_tools.py  dexonomy.py  normalize.py  rgbd_simulation.py  transforms.py
src/dexter/models/: __init__.py  action_tokenizer.py  loss.py
src/dexter/models/dexter/: __init__.py  configuration_dexter.py  generation_dexter.py  modeling_dexter.py
src/dexter/models/encoders/: partfield.py  uni3d.py
src/dexter/models/encoders/partfield_modules/: model_utils.py  triplane.py
src/dexter/models/encoders/partfield_modules/PVCNN/: conv_pointnet.py  dnnlib_util.py  encoder_pc.py  pc_encoder.py  unet_3daware.py
src/dexter/models/encoders/partfield_modules/PVCNN/pv_module/: __init__.py  ball_query.py  frustum.py  pointnet.py  pvconv.py  shared_mlp.py  voxelization.py
src/dexter/models/encoders/partfield_modules/PVCNN/pv_module/functional/: devoxelization.py
src/dexter/models/encoders/partfield_modules/UNet/: buildingblocks.py  model.py
src/dexter/training/: __init__.py  trainer.py
src/dexter/utils/: __init__.py  download.py  logger.py  object_model.py  rank_zero_only.py  shadowhand.py  shadowhand_mujoco.py  typing.py  viz.py
